src/test/deca/syntax/invalid/resultats/test19_instr_bool-synt.res
./src/test/deca/syntax/invalid/test19_instr_bool.deca:15:18: token recognition error at: '& '
